--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
         <module>Anna_Khizhnyak</module>
         <module>Hai_Le</module>
         <module>JeugenGuba</module>
-        <module>MaximSeviukov</module>
+        <module>MaximSevriukov</module>
         <module>MickleMur</module>
         <module>SabadaYevgenia</module>
         <module>SvetlanaKunderevich</module>
