--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
 
     <modules>
         <module>Pro005_Examples</module>
+        <module>AlexandrKorniychuk</module>
         <module>AlexChavarria</module>
         <module>Anna_Khizhnyak</module>
         <module>Hai_Le</module>
