--- a/TelechukPeter/pom.xml
+++ b/TelechukPeter/pom.xml
@@ -8,11 +8,11 @@
     <parent>
         <groupId>Pro005</groupId>
         <artifactId>Pro005</artifactId>
-        <version>1.0.0.</version>
+        <version>1.0.0</version>
     </parent>
 
     <artifactId>TelechukPeter</artifactId>
 
-    <modelVersion>4.0.0.</modelVersion>
+    <modelVersion>4.0.0</modelVersion>
 
 </project>
