--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,8 @@
         <module>SvetlanaKunderevich</module>
         <module>TelechukPeter</module>
         <module>VladimirTereshchenko</module>
+        <module>DanilBabenko</module>
+        <module>Peter_Zora</module>
     </modules>
 
     <build>
